# bazel-testcontainer-example

./: MODULE.bazel  README.md  maven_install.json
src/: BUILD.bazel  PingService.java  TestContainerExampleTest.java
